# Stock-Aceites

./: CMakeLists.txt  busquedaConFiltros.c  busquedaConFiltros.h  cargarAceitesDePrueba.c  cargarAceitesDePueba.h  consultasBasicas.c  consultasBasicas.h  consultasConAgregaciones.c  consultasConAgregaciones.h  estructura.h  estructuraFecha.h  main.c  ordenamientoYBuscado.c  ordenamientoYBuscado.h  otrasFunciones.c  otrasFunciones.h  proyecto.c
untitled1/: CMakeLists.txt  consultasBasicas.c  consultasBasicas.h  consultasConAgregaciones.c  ordenamientoYBuscado.c
